<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.sp.data.LiveData">

    <!--    <Button-->
    <!--        android:id="@+id/button3"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="40dp"-->
    <!--        android:text="Log Two"-->
    <!--    &lt;!&ndash;        app:layout_constraintBottom_toTopOf="@+id/Record"&ndash;&gt;-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.491"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--</RelativeLayout>-->


    <!--    <?xml version="1.0" encoding="utf-8"?>-->
    <!--<RelativeLayout-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android">-->


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart1"
        android:layout_width="385dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="128dp"
        android:text="@string/middle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/recordButton"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/bottom_left_button"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart1"
        app:layout_constraintVertical_bias="0.748"
        tools:ignore="DuplicateClickableBoundsCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:text="@string/bottom_right_button"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#E1B8B8" />

</androidx.constraintlayout.widget.ConstraintLayout>